[project]
name = "qlora-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "torch==2.4.0+cu118",
    "torchvision==0.19.0+cu118",
    "xformers==0.0.27.post2+cu118",
    "packaging==24.2",
    "triton-windows==3.1.0.post17",
    "bitsandbytes==0.45.4",
    "setuptools==78.1.0",
    "numpy<2",
    "unsloth[windows]==2025.3.19",
    "datasets==3.4.1",
]

[tool.uv]
find-links = [
    "https://download.pytorch.org/whl/cu118/torch",
    "https://download.pytorch.org/whl/cu118/torchvision",
    "https://download.pytorch.org/whl/cu118/xformers",
]

[tool.uv.sources]
unsloth = { git = "https://github.com/unslothai/unsloth.git" }
